# SAUV-Autonomy

./: .gitignore  Dockerfile  Dockerfile.ros2_humble  README.md  URDF.sdf  docker-compose.yml  gazebo.sh  gazebo_bridge.yaml  install.sh  orin_bash_july152024  process_log.py  requirements.txt  robot.sdf  robot_localization_debug.txt
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
back_and_forth/: back_and_forth_0.db3  metadata.yaml
bag_files/downward/: metadata.yaml
bag_files/joystick_1208/: metadata.yaml
bag_files/joystick_1211/: metadata.yaml
bag_files/lab-test-0821/: lab-test-0821_0.db3  metadata.yaml
bag_files/pool-test-2316/: metadata.yaml  pool-test-2316_0.db3
bag_files/pool-test-6-8-0923/: metadata.yaml  pool-test-6-8-0923_0.db3
bag_files/pool-test-6-8-0940/: metadata.yaml  pool-test-6-8-0940_0.db3
bag_files/pool-test-6-8-0951/: metadata.yaml  pool-test-6-8-0951_0.db3
bag_files/pool-test-6-8-0953/: metadata.yaml  pool-test-6-8-0953_0.db3
bag_files/test_downward/: metadata.yaml
bag_files/test_pin2/: metadata.yaml
data/: checkpoints.json
gazebo_maritime/models/auv/: logfile.txt  model.config  model.sdf
gazebo_maritime/worlds/: auv_control.sdf
joystick_1211/: joystick_1211_0.db3  metadata.yaml
joystick_1224/: joystick_1224_0.db3  metadata.yaml
ros2_ws/ControlTest/: package.xml  setup.py
ros2_ws/my_package/: package.xml  setup.py
rosbag2_2024_07_08_X_AXIS/: metadata.yaml
rosbag2_2024_07_08_Y_AXIS/: metadata.yaml
slow_ccw/: metadata.yaml  slow_ccw_0.db3
slow_cw/: metadata.yaml  slow_cw_0.db3
src/commander/: package.xml  setup.cfg  setup.py
src/config/: CMakeLists.txt  package.xml
src/control/: .forward_publisher.py.swo  .forward_publisher.py.swp  .thruster_manager.py.swp  arduino.py  arduino_script.py  arduino_subscriber.py  checkpoint_manager.py  coeffs.json  controller.py  controller_test.py  ekf.py  ekf.yaml  ekf_object.py  ekf_params.yaml  ekf_sub.py  extract_rosbag.py  force_to_pwm.py  forward_publisher.py  gamepad.py  gazebo_manager.py  imu.py  imu_noise_estimator.py  imu_publisher.py  joystick.py  keyboardcontrol.py  package.xml  pursuit.py  pwm_subscriber.py  pwm_tester.py  setup.py  state_estimator.py  state_publisher.py  sub_control.py  test_ekf.py  testing.py  thruster_manager.py  utils.py
src/control-old/: controller.py  extract_rosbag.py  forward_publisher.py  gazebo_manager.py  imu.py  state_publisher.py  thruster_manager.py  utils.py
src/dvl/: CMakeLists.txt  package.xml  test_dvl.py
src/dvl/src/: dvl_publisher.cpp
src/dvl/src/PDDecoder/: PDD_Decoder.c  PDD_Ensemble.c  PDD_Helper.c  TRDI.Drivers.PDDecoder.rc  TRDI.Drivers.PDDecoder.vcxproj  TRDI.Drivers.PDDecoder.vcxproj.filters
src/dvl_relay/: CMakeLists.txt  package.xml
src/dvl_relay/src/: dvl_relay_node.cpp
src/firmware/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/guidance/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/msgs/: CMakeLists.txt  package.xml
src/navigation/: ekf.py  package.xml
src/perception/: detect_buoy.py  location_detection.py  oakd.py  package.xml  setup.py
src/perception-test/: package.xml  setup.cfg  setup.py
src/sensor_nodes/: ImuSubscriber.py
src/srvs/: CMakeLists.txt  package.xml
src/sub_description/: package.xml  setup.cfg  setup.py
src/utils/: CMakeLists.txt  package.xml
src/xsens_mti_ros2_driver/: CMakeLists.txt
src/xsens_mti_ros2_driver/launch/: display.launch.py  xsens_mti_node.launch.py
src/xsens_mti_ros2_driver/lib/xspublic/xscontroller/: broadcastdevice.dpp  callbackmanagerxda.dpp  communicator.dpp  datalogger.dpp  devicecommunicator.dpp  deviceredetector.dpp  enumerateusbdevices.dpp  enumexpanders.dpp  iointerfacefile.dpp  messageextractor.dpp  messageserializer.dpp  mtbdatalogger.dpp  mtbfilecommunicator.dpp  mtdevice.dpp  mti3x0device.dpp  mti7_mti8device.dpp  mtibasedevice.dpp  mtigdevice.dpp  mtix00device.dpp  mtix0device.dpp  mtixdevice.dpp  mtthread.dpp  nmea_protocolhandler.dpp  protocolmanager.dpp  proxycommunicator.dpp  replymonitor.dpp  replyobject.dpp  scanner.dpp  serialcommunicator.dpp  serialinterface.dpp  supportedsyncsettings.dpp  xdacommunicatorfactory.dpp  xsdevice_def.dpp  xsdeviceconfiguration.d  xsdevicestate.d
src/xsens_mti_ros2_driver/lib/xspublic/xstypes/: datapacket_p.dpp  xsdatapacket.dpp  xsdatapacketptrarray.d  xsdeviceid.d  xsdeviceidarray.d  xsportinfo.d  xsportinfoarray.d  xssnapshot.d
src/xsens_mti_ros2_driver/param/: xsens_mti_node.yaml
src/xsens_mti_ros2_driver/rviz/: display.rviz
src/xsens_mti_ros2_driver/src/messagepublishers/: imupublisher.h  transformpublisher.h
src/yolov8_msgs/: CMakeLists.txt  package.xml
(+109 files in other folders)
